<resources>
    <string name="app_name">Moonlight Cafe</string>

    <string name="username">Username</string>
    <string name="Login">Log-in</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="register">Create an account</string>
    <string name="toast_wrong_username">The username is not valid</string>
    <string name="toast_wrong_password">Incorrect Password!</string>

    <string name="registration">Registration</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="incomplete_field">This field cannot be empty</string>
    <string name="not_cornell_email">This is not a valid Cornell email id</string>
    <string name="register_email">Cornell E-mail</string>
    <string name="already_exists">This account already exists</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign-up</string>
    <string name="set_password">Set your password</string>
    <string name="confirm_password">Retype your password</string>
    <string name="security_question_answer">Type your answer here</string>
    <string name="security_question">Please select one of the following questions: </string>
    <string name="incorrect_pass">The passwords do not match!</string>
    <string name="toast_incomplete_signup">All fields have not been completed yet!</string>
    <string name="next">Next</string>

    <string name="action_settings">Settings</string>
</resources>
